testsuite/tests/rewriting_errors/invalid_auto_fix/test.out
custom.lkql:3:14: error: Type error: expected Function but got Str
  3 |     auto_fix="WHAT?"
    |              ^^^^^^^
